# Molmo-7B-D

./: .gitignore  README.md  molmo_point_visualizer.ipynb  pyproject.toml
logs/: few_shot_20250711_112724.json  few_shot_20250711_113312.json
results/: 3233d615-21.txt  3233d615-24-0.txt  3233d615-24-5.txt  3233d615-24-6.txt  48c9152c-0-1.txt  48c9152c-0-2.txt  48c9152c-0-4.txt  48c9152c-0-6.txt  48c9152c-0-7.txt  8a23460a-1.txt  af51898d-10.txt  af51898d-15.txt  af51898d-18-4.txt  afe737fb-11.txt  afe737fb-16-5.txt  diagram.txt  diagram2.txt  fewshot.md  prompt_engineering.md  prompts.txt  res.txt
src/molmo/: chat.py  eval.py  few_shot.py  main.py  official_prompts.md  prompt.ipynb  results.py  visualize_predictions.py
src/molmo_7b_d/: main.py  test.py
